[gd_scene load_steps=4 format=3 uid="uid://cagbt5td4pukp"]

[ext_resource type="Script" path="res://06.building-online-checkers/Piece.gd" id="1_85g0y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lct7a"]
size = Vector2(64, 64)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_6np87"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true

[node name="Piece" type="Node2D" groups=["pieces"]]
script = ExtResource("1_85g0y")

[node name="EnabledColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2
color = Color(1, 0.34902, 0.631373, 1)

[node name="SelectedColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2
color = Color(0.160784, 1, 0.678431, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_lct7a")
debug_color = Color(0.286275, 0.498039, 1, 0.419608)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_6np87")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
